--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ron_converter"
+name = "Ron_Way"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -10,3 +10,7 @@ serde_json = "1.0"
 toml = "0.5"
 ron = "0.7"
 regex = "1"
+
+[bin]
+name = "Ron_Way"
+path = "src/main.rs"
