--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "Ron_Way"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -11,6 +11,6 @@ toml = "0.5"
 ron = "0.7"
 regex = "1"
 
-[bin]
+[[bin]]
 name = "Ron_Way"
 path = "src/main.rs"
