--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "ron_way"
 version = "0.1.0"
 authors = ["Jason Lang <jason.allen.lang@gmail.com"]
 edition = "2021"
+description = "Convert Alacritty terminal themes in TOML format to RON format for use with Cosmic Terminal"
+license = "MIT"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
